welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:10: error: not found: value faireV
faireV()
^