welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	def faireV() { 
		avance();
		baisseBrosse();
		leveBrosse();
		avance()
	}
}
faireV()
